Mon Jun 21 11:21:48 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:		Fix crash when a multipart/mixed message
	contains many parts that need to be scanned as attachments

Fri Jun 18 11:08:26 BST 2004 (njh)
----------------------------------
  * libclamav:			Allow any number of alternatives in
  	multipart messages

Wed Jun 16 09:09:45 BST 2004 (njh)
----------------------------------
  * clamav-milter:		Added access to sendmail variables in template
	files
				Use qualified host name for X-Virus-Scanned
	header when localSocket is set
  * docs/man/clamav-milter.8:	Added access to sendmail variables in template
	files
  * libclamav:			Added small performance improvements
  				Added thread safety measures

Tue Jun 15 22:41:03 CEST 2004 (tk)
----------------------------------
  * clamscan, clamd, freshclam: call geteuid() instead of getuid() to avoid
			error messages when the parent process is running
			with unprivileged effective UID (thanks to Al
			Smith <ajs+clamav*aeschi.ch.eu.org>)

Mon Jun 14 17:38:37 CEST 2004 (tk)
----------------------------------
  * doc: update

Mon Jun 14 15:35:04 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Added support for Windows SFU, patch by TK

Mon Jun 14 10:07:24 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Some spam generates very broken headers, added fix
  	to try to scan (with warnings about the assumptions made)

Sun Jun 13 14:26:33 CEST 2004 (tk)
----------------------------------
  * clamscan: --unace is no longer supported (when invoked on a splitted
	      archive with missing components it was waiting for the user
	      to specify where the extra files are, with "-y" even). Problem
	      found by Lloyd Kamara <l.kamara*imperial.ac.uk>)

Sun Jun 13 04:03:01 CEST 2004 (tk)
----------------------------------
  * freshclam, clamd: log version and platform information (requested by
		      Tomasz Papszun <tomek*clamav.net>)
